Created Interface of API
